// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chips Matches snapshot 1`] = `
<DocumentFragment>
  .c1 {
  transform: none;
}

.c0 {
  background: var(--eds_ui_background__light, rgba(247, 247, 247, 1));
  height: 22px;
  width: fit-content;
  display: grid;
  grid-gap: 8px;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 100px;
  padding-left: 4px;
  padding-right: 8px;
  margin: 0;
  color: var(--eds_interactive_primary__resting, rgba(0, 112, 121, 1));
  font-family: Equinor;
  font-size: 0.750rem;
  font-weight: 500;
  line-height: 1.333em;
  text-align: left;
}

.c0 svg {
  fill: var(--eds_interactive_primary__resting, rgba(0, 112, 121, 1));
}

.c0:focus {
  outline: none;
}

.c0[data-focus-visible-added]:focus {
  outline: 2px dashed var(--eds_interactive__focus, rgba(0, 112, 121, 1));
  outline-offset: 3px;
}

.c0:focus-visible {
  outline: 2px dashed var(--eds_interactive__focus, rgba(0, 112, 121, 1));
  outline-offset: 3px;
}

<div
    class="c0"
  >
    <svg
      aria-hidden="true"
      class="c1"
      fill="currentColor"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        clip-rule="evenodd"
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
        data-testid="eds-icon-path"
        fill-rule="evenodd"
        transform="scale(0.6666666666666666)"
      />
    </svg>
    Chip
  </div>
</DocumentFragment>
`;

exports[`Chips Matches snapshot 2`] = `
<DocumentFragment>
  .c1 {
  transform: none;
}

.c0 {
  background: var(--eds_ui_background__light, rgba(247, 247, 247, 1));
  height: 22px;
  width: fit-content;
  display: grid;
  grid-gap: 8px;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 100px;
  padding-left: 4px;
  padding-right: 8px;
  margin: 0;
  color: var(--eds_interactive_primary__resting, rgba(0, 112, 121, 1));
  font-family: Equinor;
  font-size: 0.750rem;
  font-weight: 500;
  line-height: 1.333em;
  text-align: left;
}

.c0 svg {
  fill: var(--eds_interactive_primary__resting, rgba(0, 112, 121, 1));
}

.c0:focus {
  outline: none;
}

.c0[data-focus-visible-added]:focus {
  outline: 2px dashed var(--eds_interactive__focus, rgba(0, 112, 121, 1));
  outline-offset: 3px;
}

.c0:focus-visible {
  outline: 2px dashed var(--eds_interactive__focus, rgba(0, 112, 121, 1));
  outline-offset: 3px;
}

@media (hover:hover) and (pointer:fine) {
  .c0:hover {
    cursor: pointer;
    color: var(--eds_interactive_primary__hover, rgba(0, 79, 85, 1));
  }

  .c0:hover svg {
    fill: var(--eds_interactive_primary__hover, rgba(0, 79, 85, 1));
  }
}

<div
    class="c0"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="c1"
      fill="currentColor"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        clip-rule="evenodd"
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
        data-testid="eds-icon-path"
        fill-rule="evenodd"
        transform="scale(0.6666666666666666)"
      />
    </svg>
    Chip
  </div>
</DocumentFragment>
`;
